engine/codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__oversized_axes_are_hidden_instead_of_truncated.snap
---
source: tui/src/analytics/plot_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width=8
 100M
 █████
 █████
 █████
 █████
────────
   ▲
Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 1:1 5:0
1: 0:0 1:2 6:0
2: 0:0 1:2 6:0
3: 0:0 1:2 6:0
4: 0:0 1:2 6:0
5: 0:3
6: 0:0 3:4 4:0
7: 0:5 6:0

width=30
               100M
 100M       ████████████
            ████████████
  50M       ████████████
            ████████████
    0 ────────────────────────
                 ▲
              Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 15:1 19:0
1: 0:0 1:2 5:0 12:3 24:0
2: 0:0 12:3 24:0
3: 0:0 2:2 5:0 12:3 24:0
4: 0:0 12:3 24:0
5: 0:0 4:2 5:0 6:2
6: 0:0 17:4 18:0
7: 0:0 14:5 20:0

width=35
                  100M
 100M         ████████████
              ████████████
  50M         ████████████
              ████████████
    0 ─────────────────────────────
                    ▲
                 Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 18:1 22:0
1: 0:0 1:2 5:0 14:3 26:0
2: 0:0 14:3 26:0
3: 0:0 2:2 5:0 14:3 26:0
4: 0:0 14:3 26:0
5: 0:0 4:2 5:0 6:2
6: 0:0 20:4 21:0
7: 0:0 17:5 23:0

width=44
                      100M
 100M              ████████████
                   ████████████
  50M              ████████████
                   ████████████
    0 ──────────────────────────────────────
                        ▲
                     Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 22:1 26:0
1: 0:0 1:2 5:0 19:3 31:0
2: 0:0 19:3 31:0
3: 0:0 2:2 5:0 19:3 31:0
4: 0:0 19:3 31:0
5: 0:0 4:2 5:0 6:2
6: 0:0 24:4 25:0
7: 0:0 21:5 27:0

width=30

    1000000000000000000T
         ▅▅▅▅▅▅▅▅▅▅▅▅
         ████████████
         ████████████
──────────────────────────────
              ▲
           Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 4:1 24:0
2: 0:0 9:2 21:0
3: 0:0 9:2 21:0
4: 0:0 9:2 21:0
5: 0:3
6: 0:0 14:4 15:0
7: 0:0 11:5 17:0
